--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pritam Das",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.2",
     "es6": "0.0.7",
     "express": "^4.17.1",
